# RayTracingPlayground

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml  StaticAnalysis.yml
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
media/: demo.ppm
scripts/: clang-latest-setup.scm  gcc-latest-setup.scm
src/: CMakeLists.txt  camera.cpp  camera.hpp  common.hpp  dielectric.cpp  dielectric.hpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  lambertian.cpp  lambertian.hpp  main.cpp  material.hpp  metal.cpp  metal.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  utilities.cpp  utilities.hpp
tests/: CMakeLists.txt  antialiasing.cpp  dielectric.cpp  diffuse_material.cpp  diffuse_material_gamma_corrected.cpp  focus_distance.cpp  hittable_abstraction.cpp  hittable_list.cpp  material_abstraction.cpp  metal_fuzzy_reflection.cpp  metal_reflection.cpp  random_scene.cpp  repositioned_camera.cpp  simple_circle_simplified_intersection.cpp  simple_circle_with_normals.cpp  simple_lambertian.cpp
